cargo-features = ["strip"]

[package]
name = "python_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-logging = "2.0.2"
log = "0.4.14"

[dependencies.pyo3]
version = "0.15.1"
features = ["auto-initialize"]

[profile.dev]
opt-level = 0

[profile.release]
strip = "symbols"
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1